name:                neuralnet
version:             0.1.0.0
homepage:            https://github.com/funrep/neuralnet#readme
license:             BSD3
license-file:        LICENSE
author:              funrep
maintainer:          example@example.com
copyright:           2017 Karl-Oskar Rikås
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ANN
                     , Types
                     , Backprop
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

executable neuralnet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neuralnet
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/funrep/neuralnet
